--- a/grsmu_diplom/demo_site/templates/demo_site/demo_site_index.html
+++ b/grsmu_diplom/demo_site/templates/demo_site/demo_site_index.html
@@ -1,6 +1,9 @@
 {% extends "base.html" %}
 {% block page_content %}
 <div class="col-md-8 offset-md-2">
+    {% for message in messages %}
+        <p style="color: turquoise">{{ message }}</p>
+    {% endfor %}
     <h1>Преподаватели</h1>
     <hr>
     {% for teacher in teachers %}
