--- a/grsmu_diplom/grsmu_diplom/templates/base.html
+++ b/grsmu_diplom/grsmu_diplom/templates/base.html
@@ -5,10 +5,17 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'demo_site_index' %}">Demo_Site</a>
+                <a class="nav-link" href="{% url 'demo_site_index' %}"><h1>Главная</h1></a>
             </li>
           </ul>
         </div>
+        {% if user.is_authenticated %}
+        <a class="nav-link">Вы вошли как {{ user.username }}</a>
+        <a class="nav-link" href="/user/logout">Выйти</a>
+        {% else %}
+        <a class="nav-link" href="/user/login">Войти</a>
+        <a class="nav-link" href="/user/register">Регистрация</a>
+        {% endif %}
     </div>
 
 </nav>
