password reset done

--- a/grsmu_diplom/users/templates/password/password_reset_complete.html
+++ b/grsmu_diplom/users/templates/password/password_reset_complete.html
@@ -5,6 +5,6 @@
 <div class="col-md-8 offset-md-2">
     <h1>Изменение пароля</h1>
     <p>Пароль успешно изменен</p>
-        <a href="/login">Войти в профиль</a>
+        <a href="/user/login">Войти в профиль</a>
 </div>
 {% endblock %}
