--- a/grsmu_diplom/users/templates/users/profile_page.html
+++ b/grsmu_diplom/users/templates/users/profile_page.html
@@ -1,16 +1,22 @@
 {% extends 'base.html' %}
+{% load static %}
 
     {% block page_content %}
 
 	<br><br>
 	<div class="container mx-auto">
+	 {% include 'users/messages.html' %}
 	    <div class="row">
 	    	<div class="col-md-3">
 		    	<div class="card p-4">
 			    	<h4 class="card-title font-weight-bold text-center">Привет, {{ user.username|title }}</h4>
 		    	    <hr>
                     <div class="card-text">
-						<p><img src="{{ profile.picture.url }}" alt="Profile Picture" width="100" height="100"></p>
+						{% if profile.profile_pic %}
+						<p><img src="{{ profile.profile_pic.url }}" alt="Profile Picture" width="100" height="100"></p>
+						{% else %}
+						<p><img src="{% static 'images/user.jpg' %}" alt="Profile Picture" width="100" height="100"></p>
+                       	{% endif %}
                         <p class="text-muted mb-0" style="font-size: 12px">Имя:</p>
                         <p>{{ user.username }}</p>
                         <p class="text-muted mb-0" style="font-size: 12px">Email::</p>
@@ -48,13 +54,14 @@
 		    <div class="modal-content">
 		      	<div class="modal-header">
 			        <h5 class="modal-title">Изменить</h5>
-			        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+			        <button type="button" class="btn btn-secondary" data-dismiss="modal" aria-label="Close">
 			          <span aria-hidden="true">&times;</span>
 			        </button>
 		        </div>
 		        <div class="modal-body">
-			        <form method="post">
+			        <form method="post" enctype="multipart/form-data">
 			          	{% csrf_token %}
+			          	<p>Сменить фото: {{ profile_form.profile_pic }}</p>
 			          	<p>Логин: {{ user_form.username }}</p>
         				<p>Email: {{ user_form.email }}</p>
         				<p>Курс: {{ profile_form.course }}</p>
