--- a/grsmu_diplom/grsmu_diplom/templates/base.html
+++ b/grsmu_diplom/grsmu_diplom/templates/base.html
@@ -1,5 +1,7 @@
 {% load static %}
-<link href="{% static 'css/bootstrap.css' %}" rel="stylesheet" type="text/css" />
+<link href="{% static 'css/bootstrap/bootstrap.css' %}" rel="stylesheet" type="text/css" />
+<link href="{% static 'css/styles/teachers.css' %}" rel="stylesheet" type="text/css" />
+
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
