скрапер работает, сделал все ссылки, сохраняет всех преподов в одну кафедру

--- a/grsmu_diplom/grsmu_diplom/templates/base.html
+++ b/grsmu_diplom/grsmu_diplom/templates/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+  {% include 'users/messages.html' %}
 <link href="{% static 'css/bootstrap/bootstrap.css' %}" rel="stylesheet" type="text/css" />
 <link href="{% static 'css/styles/teachers.css' %}" rel="stylesheet" type="text/css" />
 
