--- a/grsmu_diplom/scraper/templates/scraping/teacher_scraping_page.html
+++ b/grsmu_diplom/scraper/templates/scraping/teacher_scraping_page.html
@@ -1,8 +1,15 @@
 {% extends "base.html" %}
 {% block page_content %}
 <div class="col-md-8 offset-md-2">
-<!--{{ full_info }}-->
-<!--{{ dep_list }}-->
-{{ all_info }}
-{{ link_list }}
+<form method = "POST">
+    {{ a }}
+    {{ dep_list }}
+    {{ link_list }}
+{% for a in all_info %}
+   <li >{{ a }}</li>
+    {% endfor %}
+
+    {% csrf_token %}
+    <button type="submit" class="btn btn-primary">Сохранить</button>
+    </form>
 {% endblock %}
