--- a/grsmu_diplom/grsmu_diplom/templates/base.html
+++ b/grsmu_diplom/grsmu_diplom/templates/base.html
@@ -1,7 +1,8 @@
 {% load static %}
-  {% include 'users/messages.html' %}
 <link href="{% static 'css/bootstrap/bootstrap.css' %}" rel="stylesheet" type="text/css" />
-<link href="{% static 'css/styles/teachers.css' %}" rel="stylesheet" type="text/css" />
+<link href="{% static 'css/styles/demo_site/teachers.css' %}" rel="stylesheet" type="text/css" />
+<link href="{% static 'css/styles/demo_site/demo_site_detail.css' %}" rel="stylesheet" type="text/css" />
+<link href="{% static 'css/styles/users/profile_page.css' %}" rel="stylesheet" type="text/css" />
 
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -57,6 +58,7 @@
     </div>
   </div>
 </nav>
+  {% include 'users/messages.html' %}
 
 <!--КОНЕЦ-->
 
