--- a/grsmu_diplom/users/templates/users/messages.html
+++ b/grsmu_diplom/users/templates/users/messages.html
@@ -1,3 +1,3 @@
 {% for message in messages %}
-        <p style="color: turquoise">{{ message }}</p>
+        <p style="color: red">{{ message }}</p>
     {% endfor %}
