--- a/grsmu_diplom/users/templates/users/profile_page.html
+++ b/grsmu_diplom/users/templates/users/profile_page.html
@@ -2,7 +2,6 @@
 {% load static %}
 
     {% block page_content %}
-	 {% include 'users/messages.html' %}
 
 	<br><br>
 	<div class="container mx-auto">
@@ -28,7 +27,12 @@
 						</div>
                     </div>
                 </div>
-		  	</div>
+				{% if group == 'Not_student' %}
+			<button type="button" class="btn btn-danger" data-toggle="modal" data-target="#VerificationModal">Подтвердить аккаунт</button>
+				{% elif group == 'Student' %}
+			<button type="button" class="btn btn-success">Аккаунт подтвержден!</button>
+				{% endif %}
+		</div>
 <!--			Табличка с отзывами-->
 		    <div class="col-sm">
 			<h4 class="card-title font-weight-bold text-left">Ваши отзывы</h4>
@@ -47,9 +51,32 @@
 			</div>
 			{% endfor %}
 		</div>
-
-<!--		Форма для изменения данных профиля-->
-		<div class="modal fade" tabindex="-1" id="profileModal" role="dialog">
+<!--ФОРМА ПРОВЕРКИ MOODLE-->
+		<div class="modal fade" tabindex="-1" id="VerificationModal" role="dialog">
+	  	<div class="modal-dialog" role="document">
+		    <div class="modal-content">
+		      	<div class="modal-header">
+			        <h5 class="modal-title">Верификация аккаунта</h5>
+			        <button type="button" class="btn btn-secondary" data-dismiss="modal" aria-label="Close">
+			          <span aria-hidden="true">&times;</span>
+			        </button>
+		        </div>
+		        <div class="modal-body">
+			        <form method="post" enctype="multipart/form-data">
+			          	{% csrf_token %}
+			          	<p>Логин MOODLE: {{ moodle_form.username }}</p>
+			          	<p>Пароль MOODLE: {{ moodle_form.password }}</p>
+						<small>Внимание! Введенные данные используются для разовой проверки и не сохраняются. Верификация аккаунта применяется для подтверждения того, что пользователь является студентом ГрГМУ.</small>
+        		</div>
+		      	<div class="modal-footer">
+		        		<button type="submit" name="acc_verification" class="btn btn-primary">Проверить</button>
+		        	</form>
+		        </div>
+		    </div>
+	  	</div>
+	</div>
+<!--Форма для изменения данных профиля-->
+	<div class="modal fade" tabindex="-1" id="profileModal" role="dialog">
 	  	<div class="modal-dialog" role="document">
 		    <div class="modal-content">
 		      	<div class="modal-header">
@@ -68,13 +95,14 @@
 						<a href="/user/password_reset">Сменить пароль</a>
 		        </div>
 		      	<div class="modal-footer">
-		        		<button type="submit" class="btn btn-primary">Сохранить</button>
+		        		<button type="submit" name = "user_change" class="btn btn-primary">Сохранить</button>
 		        	</form>
 		        	<button type="button" class="btn btn-secondary" data-dismiss="modal">Отмена</button>
 		        </div>
 		    </div>
 	  	</div>
 	</div>
+
   </div>
 </div>
 {% endblock %}
