--- a/grsmu_diplom/demo_site/templates/demo_site/demo_site_department.html
+++ b/grsmu_diplom/demo_site/templates/demo_site/demo_site_department.html
@@ -15,10 +15,10 @@
         <div class="col-md-4">
             <div class="teacher-card">
                 <div class="card-body">
-                    {% if profile.profile_pic %}
-                    <img class = "img img-responsive" src="{{ profile.profile_pic.url }}" alt="Profile Picture" >
+                    {% if not teacher.teacher_img %}
+                    <img class = "img img-responsive" src="{{ teacher.teacher_img.url }}" alt="Teacher Picture" >
                     {% else %}
-                    <img class = "img img-responsive" src="{% static 'images/teacher.jpg' %}" alt="Profile Picture" >
+                    <img class = "img img-responsive" src="{% static 'images/teacher.jpg' %}" alt="Teacher Picture" >
                     {% endif %}
                     <a href="{% url 'demo_site_detail' teacher.pk %}" class="teacher-name">{{ teacher.name|title }}</a>
                     <div class="teacher-position">{{ teacher.position }}</div>
