--- a/grsmu_diplom/users/templates/users/profile_page.html
+++ b/grsmu_diplom/users/templates/users/profile_page.html
@@ -11,8 +11,8 @@
 			    	<h4 class="card-title font-weight-bold text-center">Привет, {{ user.username|title }}</h4>
 		    	    <hr>
                     <div  class="card-text">
-						{% if profile.profile_pic %}
-						<p><img src="{{ profile.profile_pic.url }}" alt="Profile Picture" width="100" height="100"></p>
+						{% if user.profile.profile_pic %}
+						<p><img src="{{ user.profile.profile_pic.url }}" alt="Profile Picture" width="100" height="100"></p>
 						{% else %}
 						<p><img src="{% static 'images/user.jpg' %}" alt="Profile Picture" width="100" height="100"></p>
                        	{% endif %}
