--- a/grsmu_diplom/demo_site/templates/demo_site/demo_site_index.html
+++ b/grsmu_diplom/demo_site/templates/demo_site/demo_site_index.html
@@ -1,10 +1,16 @@
 {% extends "base.html" %}
 {% block page_content %}
+{% load static %}
+
+    <div class="container">
 <div class="col-md-8 offset-md-2">
+
     <h1>Кафедры</h1>
     <hr>
     {% for department in departments %}
     <h2><a href="{% url 'demo_site_department' department.title %}">{{ department.title }}</a></h2>
     {% endfor %}
 </div>
+</div>
+
 {% endblock %}
