--- a/grsmu_diplom/grsmu_diplom/templates/base.html
+++ b/grsmu_diplom/grsmu_diplom/templates/base.html
@@ -19,23 +19,15 @@
       <span class="navbar-toggler-icon">⟱</span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
           <a class="nav-link" href="/demo_site/">Кафедры</a>
-        </li>
           {% if user.is_authenticated %}
-          <li class="nav-item">
           <a class="nav-link" href="{% url 'users:profile' %}">Профиль</a>
-        </li>
-          <li class="nav-item">
-        <form class="d-flex" method=POST action="{% url 'searching' %}">
+        <form class="top-search d-flex" method=POST action="{% url 'searching' %}">
         {% csrf_token %}
         <input class="form-control me-2" type="search" placeholder="Поиск" aria-label="Search" name="searched">
         <button class="btn btn-primary" type="submit">Искать</button>
       </form>
-      </li>
           {% endif %}
-      </ul>
         {% if user.is_authenticated %}
         <a class="nav-link">Вы вошли как {{ user.username }}</a>
         <a class="nav-link" href="/user/logout">Выйти</a>
@@ -49,19 +41,7 @@
 </div>
 </div>
 </div>
-<!--<header class="header-2">-->
-<!--    <div class="page-header min-vh-75 relative" style="background-image: url('/images/grsmu.jpg')">-->
-<!--      <span class="mask bg-gradient-primary opacity-4"></span>-->
-<!--      <div class="container">-->
-<!--        <div class="row">-->
-<!--          <div class="col-lg-7 text-center mx-auto">-->
-<!--            <h1 class="text-white pt-3 mt-n5">Material Kit 2</h1>-->
-<!--            <p class="lead text-white mt-3">Free & Open Source Web UI Kit built over Bootstrap 5. <br /> Join over 1.6 million developers around the world. </p>-->
-<!--          </div>-->
-<!--        </div>-->
-<!--      </div>-->
-<!--    </div>-->
-<!--  </header>-->
+
 
 
 
