--- a/grsmu_diplom/static/css/styles/demo_site/demo_site_detail.css
+++ b/grsmu_diplom/static/css/styles/demo_site/demo_site_detail.css
@@ -30,6 +30,7 @@
 
 .u-shadow-v18 {
     box-shadow: 0 5px 10px -6px rgba(0, 0, 0, 0.15);
+    margin-bottom: 25px;
 }
 
 .g-color-gray-dark-v4 {
@@ -46,7 +47,13 @@
 
 .media-comment-answer {
     text-align: end;
+}
 
+.comment-answer-img {
+    float: right;
+}
+
+.comment-img {
 }
 
 .img_detail {
