--- a/grsmu_diplom/static/css/styles/demo_site/demo_site_index.css
+++ b/grsmu_diplom/static/css/styles/demo_site/demo_site_index.css
@@ -8,24 +8,6 @@ flex: 1 1 auto;
     padding: 1rem 1rem;
 }
 
-HEADER
-.mask {
-    position: absolute;
-    background-size: cover;
-    background-position: center center;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    opacity: 0.8;
-}
-.bg-gradient-primary {
-    background-image: linear-gradient(195deg, #EC407A 0%, #D81B60 100%);
-}
-.opacity-4 {
-    opacity: 0.4 !important;
-}
-
 CARD
 .shadow-blur {
     box-shadow: inset 0 0px 1px 1px rgb(254 254 254 / 90%), 0 20px 27px 0 rgb(0 0 0 / 5%) !important;
@@ -87,6 +69,11 @@ NAVBAR
     backdrop-filter: saturate(200%) blur(30px);
     background-color: rgba(255, 255, 255, 0.8) !important;
 }
+
+.d-flex {
+    margin-bottom: 0px;
+}
+
 .py-2 {
     padding-top: 0.5rem !important;
     padding-bottom: 0.5rem !important;
