--- a/grsmu_diplom/static/css/styles/demo_site/teachers.css
+++ b/grsmu_diplom/static/css/styles/demo_site/teachers.css
@@ -30,19 +30,20 @@
 
 .teacher-card .teacher-name {
     position: absolute;
-    left: 30px;
-    bottom: 70px;
-    font-size: 30px;
+    text-align: center;
+    bottom: 30px;
+    font-size: inherit;
     color: #FFF;
     text-shadow: 0px 0px 20px rgba(0, 0, 0, 0.5);
     font-weight: bold;
     transition: all linear 0.25s;
 }
 
-.teacher-card .teacher-position {
+.teacher-position {
+    display: inline-block;
     position: absolute;
-    bottom: 50px;
-    left: 30px;
+    bottom: 10px;
+    text-align: center;
     color: #FFF;
     font-size: 13px;
     transition: all linear 0.25s;
