--- a/grsmu_diplom/scraper/templates/scraping/teacher_pic_scraping_page.html
+++ b/grsmu_diplom/scraper/templates/scraping/teacher_pic_scraping_page.html
@@ -1,13 +1,19 @@
 {% extends "base.html" %}
 {% block page_content %}
 <div class="col-md-8 offset-md-2">
-    <h1><a>базы сайта</a></h1>
+    <h1>Обновление картинок сайта</h1>
     <form method = "POST">
     <button type="submit" class="btn btn-primary">Получить</button>
     {% csrf_token %}
-</form>
+    </form>
     {{ a }}
     {{ teach_link_list }}
     {{ pictures }}
+
+    <form method = "POST">
+    <button type="submit" class="btn btn-primary">Загрузить</button>
+        {{ form.as_p }}
+    {% csrf_token %}
+    </form>
 </div>
 {% endblock %}
